Fix tables header word wrap

--- a/addons/whs/1.0.0/src/scss/table.scss
+++ b/addons/whs/1.0.0/src/scss/table.scss
@@ -24,6 +24,7 @@
     text-align: left;
     padding: 9px 10px;
     line-height: 1.2;
+    white-space: nowrap;
   }
   td {
     font-size: 18px;
